# cse282-nutriomics-project

./: .gitignore  CMakeLists.txt  README.md
experiment/: README.md  evaluation.ipynb  experiment.sh
include/: argument.h  nim.h  patient.h  solver.h  util.h
include/cli/: argument.h
include/core/: report.h  scoring.h  solver.h
include/ds/: nim.h  patient.h  treatment.h
include/util/: util.h
res/: Combine NIM.ipynb  Finding low abundance threshold.ipynb  nims.csv  patient_inputs.csv
src/: argument.cpp  nim.cpp  nutriomics_main.cpp  patient.cpp  scoring.cpp  solver.cpp  treatment.cpp  util.cpp
src/cli/: argument.cpp  nutriomics_main.cpp
src/core/: report.cpp  scoring.cpp  solver.cpp
src/ds/: nim.cpp  patient.cpp  treatment.cpp
src/util/: sum.cpp  util.cpp
test/: test_nim.cpp  test_patient.cpp  test_scoring.cpp  test_treatment.cpp  test_util.cpp
test/core/: test_scoring.cpp  test_solver.cpp
test/ds/: test_nim.cpp  test_patient.cpp  test_treatment.cpp
test/util/: test_util.cpp
